# app-framework

./: .gitignore  CONSOLIDATION_REVIEW.md  FRAMEWORK_IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  WEBSOCKET_MIGRATION_STATUS.md  episensor-app-framework-4.3.0.tgz  eslint.config.js  fix_errors.sh  fix_remaining_errors.sh  jest.config.ts  lint_output.txt  package-lock.json  package.json  tsconfig.json  tsconfig.standard.json  update-repos-ci.sh
.claude/: settings.local.json
__mocks__/: lowdb.js
app-templates/basic-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
app-templates/basic-desktop-app/src-tauri/src/: main.rs  server.rs
benchmarks/: index.js  package.json  results.json
config/: default.json
desktop/rust-templates/: Cargo.toml
desktop/rust-templates/src/: main.rs
docs/: API.md  APP_PORT_AUDIT.md  APP_STRUCTURE_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_NEW.md  Ai.md  Api.md  Architecture.md  BATTERIES_INCLUDED.md  Bundling.md  Cors.md  DEMARCATION.md  DEVELOPMENT.md  Desktop.md  DesktopIntegration.md  DesktopPackaging.md  Development.md  ENHANCED_COMPONENTS.md  LOGGING.md  LOGGING_ARCHITECTURE.md  MIGRATION_GUIDE.md  PORT_MANAGEMENT.md  Patterns.md  Ports.md  SOCKET_IO_USAGE.md  STABILITY_FIXES_SUMMARY.md  STANDARDS.md  Standards.md  Structure.md  TAURI_DESKTOP_APPS.md  TESTING.md  Theme.md  UNIFIED_WEBSOCKET_STRATEGY.md  WEBSOCKET.md  WEBSOCKET_MIGRATION_PLAN.md  Websocket.md  ci-cd-template.md  desktop-app-data-storage.md
scripts/: README.md  postbuild-ensure-cli-executables.cjs  tauri-build-clean.sh
src/: index.ts
tests/: setup.ts  (+1 more)
(+232 files in other folders)
